trunk/Archive/956d7b7096b304aa65e9e6043b866467-50d9cfc8a1d350e7409e81e87c2653ba/output
main.cpp: In function 'int main()':
main.cpp:7:50: error: conversion from 'std::pair<int&, int>' to non-scalar type 'main()::<anonymous struct>' requested
     struct {} wat = std::make_pair(std::ref(i), 0);
                                                  ^
